feature: collect(Collectors.toList()) -> toList 개선