@@ -2,7 +2,6 @@ package com.programmers.springbasic.mapper;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -16,7 +15,7 @@ public class CustomerCsvFileMapper {
 			UUID id = UUID.fromString(parts[0]);
 			String name = parts[1];
 			return new Customer(id, name, null, null);
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 }
